syntax = "proto3";

package ligato.generic;

option go_package = "go.ligato.io/vpp-agent/v2/proto/ligato/generic";

import "ligato/generic/model.proto";

// MetaService defines the RPC methods for managing generic models.
service MetaService {

    // KnownModels returns information about service capabilities
    // including list of models supported by the server.
    rpc KnownModels (KnownModelsRequest) returns (KnownModelsResponse);
}

message KnownModelsRequest {
    string class = 1;
}

message KnownModelsResponse {
    repeated generic.ModelDetail known_models = 1;
    repeated string active_modules = 2;
}
